log

Wed 13 Mar 2024 08:39:19 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
0f7d86e
Wed 13 Mar 2024 08:39:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
3d144c9
Wed 13 Mar 2024 08:47:08 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
b5d6bbc
Wed 13 Mar 2024 08:48:43 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d0c076b
Wed 13 Mar 2024 08:49:05 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
a9be118
Wed 13 Mar 2024 08:49:19 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
9545020
Wed 13 Mar 2024 08:51:15 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4f5a16e
Wed 13 Mar 2024 09:08:38 PM UTC: 
 exercises.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 20/70
e020496
Wed 13 Mar 2024 09:20:20 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:15: error: array subscript is not an integer
   60 |       newArray[newSize] = arr[i];
      |               ^
Compilation failed
94522dc
Wed 13 Mar 2024 09:21:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
8ca23bd
